# GameMath

./: .gitignore  CMakeLists.txt  LICENSE.txt
include/: GameMath.hpp
include/GameMath/: Alignment.hpp  BoundingBox.hpp  Frustum.hpp  Mat3.hpp  Mat4.hpp  Math.hpp  Plane.hpp  Platform.hpp  Quaternion.hpp  Types.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
tests/: CMakeLists.txt  Mat4f.cpp  Plane.cpp  StaticTests.cpp
